--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
+    <header class="header">
+        <img class="header_img" src="assets/img/logo/logo.png" alt="">
+        <div class="header_phone">
+            <li>BOOK A TABLE</li>
+            <li><i class="fa-solid fa-phone"></i> +12(345)6789</li>
+        </div>
+        <ul class="header_ul">
+            <li class="header_ul_li_home">Home <i class="fa-solid fa-angle-down"></i></li>
+            <li class="header_ul_li_about">About</li>
+            <li class="header_ul_li_page">Page <i class="fa-solid fa-angle-down"></i></li>
+            <li class="header_ul_li_shop">Shop <i class="fa-solid fa-angle-down"></i></li>
+            <li class="header_ul_li_contact">Contact</li>
+        </ul>
 
+        <div>
+            <h1>BEST QUALITY FOODS</h1>
+            <img src="assets/img/slider/img_bg2.png" alt="">
+        </div>
+    </header>
     <!-- Category -->
 
     <!-- About us -->
@@ -20,8 +39,9 @@
 
     <!-- Blog -->
 
-    <!-- Footer -->
+    <!-- Footer  Virginie-->
 
     
 </body>
+<script src="https://kit.fontawesome.com/cabdd58b8c.js" crossorigin="anonymous"></script>
 </html>
