--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
 
     <!-- Category -->
+    <section class="category">
+        <div class="category__up">
 
+        </div>
+        <div class="category__down">
+            <img class="category__down__dish" src="assets/img/gallery/imgfood1.png" alt="plate with food" >
+            <img class="category__down__dish category__down__dish__middle" src="assets/img/gallery/imgfood2.jpg" alt="plate with salad" >
+            <img class="category__down__dish" src="assets/img/gallery/imgfood3.png" alt="eggs" >
+        </div>
+    </section>
     <!-- About us -->
 
     <!-- Our menu -->
@@ -22,6 +32,6 @@
 
     <!-- Footer -->
 
-    
+
 </body>
 </html>
