--- a/index.html
+++ b/index.html
@@ -8,28 +8,47 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header">
-        <img class="header_img" src="assets/img/logo/logo.png" alt="">
-        <div class="header_phone">
-            <li>BOOK A TABLE</li>
-            <li><i class="fa-solid fa-phone"></i> +12(345)6789</li>
-        </div>
-        <ul class="header_ul">
-            <li class="header_ul_li_home">Home <i class="fa-solid fa-angle-down"></i></li>
-            <li class="header_ul_li_about">About</li>
-            <li class="header_ul_li_page">Page <i class="fa-solid fa-angle-down"></i></li>
-            <li class="header_ul_li_shop">Shop <i class="fa-solid fa-angle-down"></i></li>
-            <li class="header_ul_li_contact">Contact</li>
-        </ul>
 
-        <div>
-            <h1>BEST QUALITY FOODS</h1>
-            <img src="assets/img/slider/img_bg2.png" alt="">
-        </div>
-    </header>
     <!-- Category -->
     <section class="category">
         <div class="category__up">
+            <h2 class="category__up__filigranne">Category</h2>
+            <div class="category__up__wrapTitle">
+                <h3 class="category__up__title">Choose your best category</h3>
+                <p class="category__up__text">Best foods for you and family</p>
+            </div>
+            <div class="category__up__wrapItems">
+                <div class="category__up__item">
+                    <img class="category__up__item__dish" src="assets/img/icons/001-cheeseburger.png" alt="icon cheeseburger" >
+                    <h4 class="category__up__item_title">Cheeseburger</h4>
+                    <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
+                </div>
+                <div class="category_up_item">
+                    <img class="category__up__item__dish" src="assets/img/icons/002-pizza.png" alt="icon pizza" >
+                    <h4 class="category__up__item_title">Pizza slice</h4>
+                    <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
+                </div>
+                <div class="category_up_item">
+                    <img class="category__up__item__dish" src="assets/img/icons/003-coffee.png" alt="icon coffee" >
+                    <h4 class="category__up__item_title">Coffee-Cup</h4>
+                    <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
+                </div>
+                <div class="category_up_item">
+                    <img class="category__up__item__dish" src="assets/img/icons/004-chicken-leg.png" alt="icon chicken leg" >
+                    <h4 class="category__up__item_title">Chicken-Leg</h4>
+                    <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
+                </div>
+                <div class="category_up_item">
+                    <img class="category__up__item__dish" src="assets/img/icons/005-cocktail.png" alt="icon 005-cocktail" >
+                    <h4 class="category__up__item_title">Energy Drink</h4>
+                    <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
+                </div>
+                <div class="category_up_item">
+                    <img class="category__up__item__dish" src="assets/img/icons/006-marin.png" alt="icon shrimp" >
+                    <h4 class="category__up__item_title">Shrimp</h4>
+                    <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
+                </div>
+            </div>
 
         </div>
         <div class="category__down">
