--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
             <div class="category__up__wrapItems">
                 <div class="category__up__item">
                     <img class="category__up__item__dish" src="assets/img/icons/001-cheeseburger.png" alt="icon cheeseburger" >
-                    <h4 class="category__up__item_title">Cheeseburger</h4>
+                    <h4 class="category__up__item__title">Cheeseburger</h4>
                     <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
                 </div>
-                <div class="category_up_item">
+                <div class="category__up__item">
                     <img class="category__up__item__dish" src="assets/img/icons/002-pizza.png" alt="icon pizza" >
-                    <h4 class="category__up__item_title">Pizza slice</h4>
+                    <h4 class="category__up__item__title">Pizza slice</h4>
                     <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
                 </div>
-                <div class="category_up_item">
+                <div class="category__up__item">
                     <img class="category__up__item__dish" src="assets/img/icons/003-coffee.png" alt="icon coffee" >
-                    <h4 class="category__up__item_title">Coffee-Cup</h4>
+                    <h4 class="category__up__item__title">Coffee-Cup</h4>
                     <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
                 </div>
-                <div class="category_up_item">
+                <div class="category__up__item">
                     <img class="category__up__item__dish" src="assets/img/icons/004-chicken-leg.png" alt="icon chicken leg" >
-                    <h4 class="category__up__item_title">Chicken-Leg</h4>
+                    <h4 class="category__up__item__title">Chicken-Leg</h4>
                     <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
                 </div>
-                <div class="category_up_item">
+                <div class="category__up__item">
                     <img class="category__up__item__dish" src="assets/img/icons/005-cocktail.png" alt="icon 005-cocktail" >
-                    <h4 class="category__up__item_title">Energy Drink</h4>
+                    <h4 class="category__up__item__title">Energy Drink</h4>
                     <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
                 </div>
-                <div class="category_up_item">
+                <div class="category__up__item">
                     <img class="category__up__item__dish" src="assets/img/icons/006-marin.png" alt="icon shrimp" >
-                    <h4 class="category__up__item_title">Shrimp</h4>
+                    <h4 class="category__up__item__title">Shrimp</h4>
                     <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
                 </div>
             </div>
