--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <!-- Header -->
     <header class="header">
+        <picture>
+            <!-- <img src="assets/img/slider/img_bg_slider_home01.jpg" alt=""> -->
+        </picture>
         <img class="header_img" src="assets/img/logo/logo.png" alt="">
         <div class="header_phone">
-            <li>BOOK A TABLE</li>
-            <li><i class="fa-solid fa-phone"></i> +12(345)6789</li>
+            <li class="header_header_phone_book">BOOK A TABLE</li>
+            <li class="header_header_phone_num"><i class="fa-solid fa-phone fa-rotate-270"></i> +012(345)6789</li>
         </div>
         <ul class="header_ul">
             <li class="header_ul_li_home">Home <i class="fa-solid fa-angle-down"></i></li>
@@ -21,10 +24,14 @@
             <li class="header_ul_li_shop">Shop <i class="fa-solid fa-angle-down"></i></li>
             <li class="header_ul_li_contact">Contact</li>
         </ul>
-
-        <div>
-            <h1>BEST QUALITY FOODS</h1>
-            <img src="assets/img/slider/img_bg2.png" alt="">
+        <div class="header_title">
+            <h1 class="header_title_head">BEST QUALITY FOODS</h1>
+        </div>
+        <div class="header_p">
+            <p>EXPLORE OUR MENU <i class="fa-solid fa-arrow-right fa-2xs"></i></p>
+        </div>
+        <div class="header_logo">
+            <img class="header_logo_img" src="assets/img/slider/img_bg2.png" alt="">
         </div>
     </header>
     <!-- Category -->
