Finish mobile category alone

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <!-- Category -->
     <section class="category">
         <div class="category__up">
-            <h2 class="category__up__filigranne">Category</h2>
-            <div class="category__up__wrapTitle">
-                <h3 class="category__up__title">Choose your best category</h3>
-                <p class="category__up__text">Best foods for you and family</p>
-            </div>
+            <header class="category__up__header">
+                <h2 class="category__up__filigran">Category</h2>
+                <div class="category__up__wrapTitle">
+                    <h3 class="category__up__title">Choose your best category</h3>
+                    <p class="category__up__text">Best foods for you & family</p>
+                </div>
+            </header>
             <div class="category__up__wrapItems">
                 <div class="category__up__item">
                     <img class="category__up__item__dish" src="assets/img/icons/001-cheeseburger.png" alt="icon cheeseburger" >
