--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <picture>
-            <!-- <img src="assets/img/slider/img_bg_slider_home01.jpg" alt=""> -->
-        </picture>
+        
         <img class="header_img" src="assets/img/logo/logo.png" alt="">
         <div class="header_phone">
             <li class="header_header_phone_book">BOOK A TABLE</li>
             <li class="header_header_phone_num"><i class="fa-solid fa-phone fa-rotate-270"></i> +012(345)6789</li>
         </div>
-        <ul class="header_ul">
+        <div class="header_ul">
+        <ul class="header_div_ul">
             <li class="header_ul_li_home">Home <i class="fa-solid fa-angle-down"></i></li>
             <li class="header_ul_li_about">About</li>
             <li class="header_ul_li_page">Page <i class="fa-solid fa-angle-down"></i></li>
             <li class="header_ul_li_shop">Shop <i class="fa-solid fa-angle-down"></i></li>
             <li class="header_ul_li_contact">Contact</li>
         </ul>
-        <div class="header_title">
-            <h1 class="header_title_head">BEST QUALITY FOODS</h1>
-        </div>
-        <div class="header_p">
-            <p>EXPLORE OUR MENU <i class="fa-solid fa-arrow-right fa-2xs"></i></p>
         </div>
         <div class="header_logo">
             <img class="header_logo_img" src="assets/img/slider/img_bg2.png" alt="">
         </div>
+        <div class="header_title">
+            <h1 class="header_title_head">BEST QUALITY FOODS</h1>
+        </div>
+        <div class="header_p">
+            <p class="header_p_explore">EXPLORE OUR MENU <i class="fa-solid fa-arrow-right fa-2xs"></i></p>
+        </div>
+
     </header>
     <!-- Category -->
 
