--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <div class="category__up">
         <h2 class="category__up__filigran">Category</h2>
         <div class="category__up__wrapTitle">
-            <h3 class="category__up__title">Choose your best category</h3>
-            <p class="category__up__text">Best foods for you & family</p>
+            <h3 class="category__up__wrapTitle__title">Choose your best category</h3>
+            <p class="category__up__wrapTitle__text">Best foods for you & family</p>
         </div>
         <div class="category__up__wrapItems">
             <div class="category__up__item">
