--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
         <img class="category__down__dish category__down__dish__middle" src="assets/img/gallery/imgfood2.jpg" alt="plate with salad" >
         <img class="category__down__dish" src="assets/img/gallery/imgfood3.png" alt="eggs" >
     </div>
-</section>    
+</section> 
+
     <!-- About us -->
-    
+<section class="about">
+    <h2></h2>
+</section>
 
     <!-- Our menu -->
 
