--- a/index.html
+++ b/index.html
@@ -1,94 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- Header -->
     <header class="header">
-        
-        <img class="header_img" src="assets/img/logo/logo.png" alt="">
-        <div class="header_phone">
-            <li class="header_header_phone_book">BOOK A TABLE</li>
-            <li class="header_header_phone_num"><i class="fa-solid fa-phone fa-rotate-270"></i> +012(345)6789</li>
-        </div>
-        <div class="header_ul">
+      <img class="header_img" src="assets/img/logo/logo.png" alt="" />
+      <div class="header_phone">
+        <li class="header_header_phone_book">BOOK A TABLE</li>
+        <li class="header_header_phone_num">
+          <i class="fa-solid fa-phone fa-rotate-270"></i> +012(345)6789
+        </li>
+      </div>
+      <div class="header_ul">
         <ul class="header_div_ul">
-            <li class="header_ul_li_home">Home <i class="fa-solid fa-angle-down"></i></li>
-            <li class="header_ul_li_about">About</li>
-            <li class="header_ul_li_page">Page <i class="fa-solid fa-angle-down"></i></li>
-            <li class="header_ul_li_shop">Shop <i class="fa-solid fa-angle-down"></i></li>
-            <li class="header_ul_li_contact">Contact</li>
+          <li class="header_ul_li_home">
+            Home <i class="fa-solid fa-angle-down"></i>
+          </li>
+          <li class="header_ul_li_about">About</li>
+          <li class="header_ul_li_page">
+            Page <i class="fa-solid fa-angle-down"></i>
+          </li>
+          <li class="header_ul_li_shop">
+            Shop <i class="fa-solid fa-angle-down"></i>
+          </li>
+          <li class="header_ul_li_contact">Contact</li>
         </ul>
-        </div>
-        <div class="header_logo">
-            <img class="header_logo_img" src="assets/img/slider/img_bg2.png" alt="">
-        </div>
-        <div class="header_title">
-            <h1 class="header_title_head">BEST QUALITY FOODS</h1>
-        </div>
-        <div class="header_p">
-            <p class="header_p_explore">EXPLORE OUR MENU <i class="fa-solid fa-arrow-right fa-2xs"></i></p>
-        </div>
-
+      </div>
+      <div class="header_logo">
+        <img
+          class="header_logo_img"
+          src="assets/img/slider/img_bg2.png"
+          alt=""
+        />
+      </div>
+      <div class="header_title">
+        <h1 class="header_title_head">BEST QUALITY FOODS</h1>
+      </div>
+      <div class="header_p">
+        <p class="header_p_explore">
+          EXPLORE OUR MENU <i class="fa-solid fa-arrow-right fa-2xs"></i>
+        </p>
+      </div>
     </header>
 
-<!-- Category -->
+    <!-- Category -->
 
-<section class="category">
-    <div class="category__up">
+    <section class="category">
+      <div class="category__up">
         <h2 class="category__up__filigran">Category</h2>
         <div class="category__up__wrapTitle">
-            <h3 class="category__up__wrapTitle__title">Choose your best category</h3>
-            <p class="category__up__wrapTitle__text">Best foods for you & family</p>
+          <h3 class="category__up__wrapTitle__title">
+            Choose your best category
+          </h3>
+          <p class="category__up__wrapTitle__text">
+            Best foods for you & family
+          </p>
         </div>
         <div class="category__up__wrapItems">
-            <div class="category__up__item">
-                <img class="category__up__item__dish" src="assets/img/icons/001-cheeseburger.png" alt="icon cheeseburger" >
-                <h4 class="category__up__item__title">Cheeseburger</h4>
-                <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
-            </div>
-            <div class="category__up__item">
-                <img class="category__up__item__dish" src="assets/img/icons/002-pizza.png" alt="icon pizza" >
-                <h4 class="category__up__item__title">Pizza slice</h4>
-                <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
-            </div>
-            <div class="category__up__item">
-                <img class="category__up__item__dish" src="assets/img/icons/003-coffee.png" alt="icon coffee" >
-                <h4 class="category__up__item__title">Coffee-Cup</h4>
-                <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
-            </div>
-            <div class="category__up__item">
-                <img class="category__up__item__dish" src="assets/img/icons/004-chicken-leg.png" alt="icon chicken leg" >
-                <h4 class="category__up__item__title">Chicken-Leg</h4>
-                <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
-            </div>
-            <div class="category__up__item">
-                <img class="category__up__item__dish" src="assets/img/icons/005-cocktail.png" alt="icon 005-cocktail" >
-                <h4 class="category__up__item__title">Energy Drink</h4>
-                <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
-            </div>
-            <div class="category__up__item">
-                <img class="category__up__item__dish" src="assets/img/icons/006-marin.png" alt="icon shrimp" >
-                <h4 class="category__up__item__title">Shrimp</h4>
-                <img class="category__up__item__arrow" src="assets/img/Other/arrow.png" alt="arrow" >
-            </div>
+          <div class="category__up__item">
+            <img
+              class="category__up__item__dish"
+              src="assets/img/icons/001-cheeseburger.png"
+              alt="icon cheeseburger"
+            />
+            <h4 class="category__up__item__title">Cheeseburger</h4>
+            <img
+              class="category__up__item__arrow"
+              src="assets/img/Other/arrow.png"
+              alt="arrow"
+            />
+          </div>
+          <div class="category__up__item">
+            <img
+              class="category__up__item__dish"
+              src="assets/img/icons/002-pizza.png"
+              alt="icon pizza"
+            />
+            <h4 class="category__up__item__title">Pizza slice</h4>
+            <img
+              class="category__up__item__arrow"
+              src="assets/img/Other/arrow.png"
+              alt="arrow"
+            />
+          </div>
+          <div class="category__up__item">
+            <img
+              class="category__up__item__dish"
+              src="assets/img/icons/003-coffee.png"
+              alt="icon coffee"
+            />
+            <h4 class="category__up__item__title">Coffee-Cup</h4>
+            <img
+              class="category__up__item__arrow"
+              src="assets/img/Other/arrow.png"
+              alt="arrow"
+            />
+          </div>
+          <div class="category__up__item">
+            <img
+              class="category__up__item__dish"
+              src="assets/img/icons/004-chicken-leg.png"
+              alt="icon chicken leg"
+            />
+            <h4 class="category__up__item__title">Chicken-Leg</h4>
+            <img
+              class="category__up__item__arrow"
+              src="assets/img/Other/arrow.png"
+              alt="arrow"
+            />
+          </div>
+          <div class="category__up__item">
+            <img
+              class="category__up__item__dish"
+              src="assets/img/icons/005-cocktail.png"
+              alt="icon 005-cocktail"
+            />
+            <h4 class="category__up__item__title">Energy Drink</h4>
+            <img
+              class="category__up__item__arrow"
+              src="assets/img/Other/arrow.png"
+              alt="arrow"
+            />
+          </div>
+          <div class="category__up__item">
+            <img
+              class="category__up__item__dish"
+              src="assets/img/icons/006-marin.png"
+              alt="icon shrimp"
+            />
+            <h4 class="category__up__item__title">Shrimp</h4>
+            <img
+              class="category__up__item__arrow"
+              src="assets/img/Other/arrow.png"
+              alt="arrow"
+            />
+          </div>
         </div>
-    </div>
-    <div class="category__down">
-        <img class="category__down__dish" src="assets/img/gallery/imgfood1.png" alt="plate with food" >
-        <img class="category__down__dish category__down__dish__middle" src="assets/img/gallery/imgfood2.jpg" alt="plate with salad" >
-        <img class="category__down__dish" src="assets/img/gallery/imgfood3.png" alt="eggs" >
-    </div>
-</section> 
+      </div>
+      <div class="category__down">
+        <img
+          class="category__down__dish"
+          src="assets/img/gallery/imgfood1.png"
+          alt="plate with food"
+        />
+        <img
+          class="category__down__dish category__down__dish__middle"
+          src="assets/img/gallery/imgfood2.jpg"
+          alt="plate with salad"
+        />
+        <img
+          class="category__down__dish"
+          src="assets/img/gallery/imgfood3.png"
+          alt="eggs"
+        />
+      </div>
+    </section>
 
     <!-- About us -->
-<section class="about">
-    <h2></h2>
-</section>
+    <section class="about">
+      <h2 class="about_filigran">About Us</h2>
+      <div class="about_wrapTitle">
+        <h3 class="about__wrapTitle__title">WHY CHOOSE US</h3>
+        <p class="about__wrapTitle__text">Best foods for you & family</p>
+      </div>
+      <div class="about_logo">
+        <img src="assets/img/about-us/iconbgabout.png" alt="" />
+      </div>
+      <div class="about_whos">
+        <div class="about_photo">
+            <img src="assets/img/about-us/img_aboutus_home1.jpg" alt="" />
+        </div>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe enim
+          laboriosam esse dolorum, voluptates facilis et accusantium vitae
+          repudiandae animi nisi omnis consectetur explicabo temporibus autem
+          perspiciatis optio incidunt dolorem odit veniam deleniti aliquid
+          possimus!
+        </p>
+        <p class="discover">DISCOVER MORE <i class="fa-solid fa-arrow-right"></i></p>
+      </div>
+    </section>
 
     <!-- Our menu -->
 
@@ -99,8 +195,9 @@
     <!-- Blog -->
 
     <!-- Footer  Virginie-->
-
-
-</body>
-<script src="https://kit.fontawesome.com/cabdd58b8c.js" crossorigin="anonymous"></script>
+  </body>
+  <script
+    src="https://kit.fontawesome.com/cabdd58b8c.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
