--- a/index.html
+++ b/index.html
@@ -149,7 +149,29 @@
     </div>
 </section>    
     <!-- About us -->
-    
+    <section class="about">
+        <h2 class="about__filigran">About Us</h2>
+        <div class="about__wrapTitle">
+          <h3 class="about__wrapTitle__title">WHY CHOOSE US</h3>
+          <p class="about__wrapTitle__text">Best foods for you & family</p>
+        </div>
+        <div class="about_logo">
+          <img src="assets/img/about-us/iconbgabout.png" alt="" />
+        </div>
+        <div class="about_whos">
+          <div class="about_photo">
+              <img src="assets/img/about-us/img_aboutus_home1.jpg" alt="" />
+          </div>
+          <p class="about_lorem">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe enim
+            laboriosam esse dolorum, voluptates facilis et accusantium vitae
+            repudiandae animi nisi omnis consectetur explicabo temporibus autem
+            perspiciatis optio incidunt dolorem odit veniam deleniti aliquid
+            possimus!
+          </p>
+          <p class="discover">DISCOVER MORE <i class="fa-solid fa-arrow-right"></i></p>
+        </div>
+      </section>
 
 <!-- Our menu -->
 
