--- a/index.html
+++ b/index.html
@@ -89,6 +89,58 @@
 
 <!-- Our menu -->
 
+
+<section class="menu">
+    <h2 class="menu__filigran">Category</h2>
+    <div class="menu__wrapTitle">
+        <h3 class="menu__wrapTitle__title">Try our special offer</h3>
+        <p class="menu__wrapTitle__text">Best foods for you & family</p>
+    </div>
+    <div class="menu__wrapItems">
+        <div class="menu__wrapItems__item">
+            <h4 class="menu__wrapItems__item__title">RawScallops From Erquy</h4>
+            <p class="menu__wrapItems__item__description">Candied Jerusalem artichokes, truffle</p>
+            <p class="menu__wrapItems__item__price">$89</p>
+        </div>
+        <div class="menu__wrapItems__item">
+            <h4 class="menu__wrapItems__item__title">Celeria and Truffle Ravioli</h4>
+            <p class="menu__wrapItems__item__description">Roasted langoustine, consommé</p>
+            <p class="menu__wrapItems__item__price">$89</p>
+        </div>
+        <div class="menu__wrapItems__item">
+            <h4 class="menu__wrapItems__item__title">Cod Filet Cooked on One Side</h4>
+            <p class="menu__wrapItems__item__description">Chorizo, chickpea espuma, pequillos</p>
+            <p class="menu__wrapItems__item__price">$89</p>
+        </div>
+        <div class="menu__wrapItems__item">
+            <h4 class="menu__wrapItems__item__title">Sea Bass Ceviche</h4>
+            <p class="menu__wrapItems__item__description">Avocado, butternut, lime</p>
+            <p class="menu__wrapItems__item__price"></p>
+        </div>
+        <div class="menu__wrapItems__item">
+            <h4 class="menu__wrapItems__item__title">Corrèze Pan-seared Veal Liver</h4>
+            <p class="menu__wrapItems__item__description">Olive oil mashed potato, onion jus</p>
+            <p class="menu__wrapItems__item__price">$89</p>
+        </div>
+        <div class="menu__wrapItems__item">
+            <h4 class="menu__wrapItems__item__title">Grilled Veal Filet Mignon</h4>
+            <p class="menu__wrapItems__item__description">Pumpkin, endives with hazelnuts</p>
+            <p class="menu__wrapItems__item__price">$89</p>
+        </div>
+        <div class="menu__wrapItems__item">
+            <h4 class="menu__wrapItems__item__title">Tender Octopus and Fennel</h4>
+            <p class="menu__wrapItems__item__description">Citrus, wild rocket condiment</p>
+            <p class="menu__wrapItems__item__price">$89</p>
+        </div>
+        <div class="menu__wrapItems__item">
+            <h4 class="menu__wrapItems__item__title">Viennese Veal Cutlet</h4>
+            <p class="menu__wrapItems__item__description">Ricotta and spinach gnocchi, Caccio de Pepe</p>
+            <p class="menu__wrapItems__item__price">$89</p>
+        </div>
+    </div>
+    <img src="assets/img/our-menu/img2bg-our-menu.jpg" alt="">
+</section>
+
 <!-- Gallery -->
 
 <!-- Team -->
