--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
 <section class="menu">
-    <h2 class="menu__filigran">Category</h2>
+    <h2 class="menu__filigran">Our menu</h2>
     <div class="menu__wrapTitle">
         <h3 class="menu__wrapTitle__title">Try our special offer</h3>
         <p class="menu__wrapTitle__text">Best foods for you & family</p>
