--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
           <div class="about_photo">
               <img src="assets/img/about-us/img_aboutus_home1.jpg" alt="" />
           </div>
+          <div class="about_text">
           <p class="about_lorem">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe enim
             laboriosam esse dolorum, voluptates facilis et accusantium vitae
@@ -170,6 +171,7 @@
             possimus!
           </p>
           <p class="discover">DISCOVER MORE <i class="fa-solid fa-arrow-right"></i></p>
+        </div>
         </div>
       </section>
 
