--- a/index.html
+++ b/index.html
@@ -141,28 +141,40 @@
             />
           </div>
         </div>
-    </div>
-    <div class="category__down">
-        <img class="category__down__dish" src="assets/img/gallery/imgfood1.png" alt="plate with food" >
-        <img class="category__down__dish category__down__dish__middle" src="assets/img/gallery/imgfood2.jpg" alt="plate with salad" >
-        <img class="category__down__dish" src="assets/img/gallery/imgfood3.png" alt="eggs" >
-    </div>
-</section>    
+      </div>
+      <div class="category__down">
+        <img
+          class="category__down__dish"
+          src="assets/img/gallery/imgfood1.png"
+          alt="plate with food"
+        />
+        <img
+          class="category__down__dish category__down__dish__middle"
+          src="assets/img/gallery/imgfood2.jpg"
+          alt="plate with salad"
+        />
+        <img
+          class="category__down__dish"
+          src="assets/img/gallery/imgfood3.png"
+          alt="eggs"
+        />
+      </div>
+    </section>
     <!-- About us -->
     <section class="about">
-        <h2 class="about__filigran">About Us</h2>
-        <div class="about__wrapTitle">
-          <h3 class="about__wrapTitle__title">WHY CHOOSE US</h3>
-          <p class="about__wrapTitle__text">Best foods for you & family</p>
+      <h2 class="about__filigran">About Us</h2>
+      <div class="about__wrapTitle">
+        <h3 class="about__wrapTitle__title">WHY CHOOSE US</h3>
+        <p class="about__wrapTitle__text">Best foods for you & family</p>
+      </div>
+      <div class="about_logo">
+        <img src="assets/img/about-us/iconbgabout.png" alt="" />
+      </div>
+      <div class="about_whos">
+        <div class="about_photo">
+          <img src="assets/img/about-us/img_aboutus_home1.jpg" alt="" />
         </div>
-        <div class="about_logo">
-          <img src="assets/img/about-us/iconbgabout.png" alt="" />
-        </div>
-        <div class="about_whos">
-          <div class="about_photo">
-              <img src="assets/img/about-us/img_aboutus_home1.jpg" alt="" />
-          </div>
-          <div class="about_text">
+        <div class="about_text">
           <p class="about_lorem">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe enim
             laboriosam esse dolorum, voluptates facilis et accusantium vitae
@@ -170,72 +182,116 @@
             perspiciatis optio incidunt dolorem odit veniam deleniti aliquid
             possimus!
           </p>
-          <p class="discover">DISCOVER MORE <i class="fa-solid fa-arrow-right"></i></p>
+          <p class="discover">
+            DISCOVER MORE <i class="fa-solid fa-arrow-right"></i>
+          </p>
         </div>
-        </div>
-      </section>
+      </div>
+    </section>
 
-<!-- Our menu -->
+    <!-- Our menu -->
 
-
-<section class="menu">
-    <h2 class="menu__filigran">Our menu</h2>
-    <div class="menu__wrapTitle">
+    <section class="menu">
+      <h2 class="menu__filigran">Our menu</h2>
+      <div class="menu__wrapTitle">
         <h3 class="menu__wrapTitle__title">Try our special offer</h3>
         <p class="menu__wrapTitle__text">Best foods for you & family</p>
-    </div>
-    <div class="menu__wrapItems">
+      </div>
+      <div class="menu__wrapItems">
         <div class="menu__wrapItems__item">
-            <h4 class="menu__wrapItems__item__title">RawScallops From Erquy</h4>
-            <p class="menu__wrapItems__item__description">Candied Jerusalem artichokes, truffle</p>
-            <p class="menu__wrapItems__item__price">$89</p>
+          <h4 class="menu__wrapItems__item__title">RawScallops From Erquy</h4>
+          <p class="menu__wrapItems__item__description">
+            Candied Jerusalem artichokes, truffle
+          </p>
+          <p class="menu__wrapItems__item__price">$89</p>
         </div>
         <div class="menu__wrapItems__item">
-            <h4 class="menu__wrapItems__item__title">Celeria and Truffle Ravioli</h4>
-            <p class="menu__wrapItems__item__description">Roasted langoustine, consommé</p>
-            <p class="menu__wrapItems__item__price">$89</p>
+          <h4 class="menu__wrapItems__item__title">
+            Celeria and Truffle Ravioli
+          </h4>
+          <p class="menu__wrapItems__item__description">
+            Roasted langoustine, consommé
+          </p>
+          <p class="menu__wrapItems__item__price">$89</p>
         </div>
         <div class="menu__wrapItems__item">
-            <h4 class="menu__wrapItems__item__title">Cod Filet Cooked on One Side</h4>
-            <p class="menu__wrapItems__item__description">Chorizo, chickpea espuma, pequillos</p>
-            <p class="menu__wrapItems__item__price">$89</p>
+          <h4 class="menu__wrapItems__item__title">
+            Cod Filet Cooked on One Side
+          </h4>
+          <p class="menu__wrapItems__item__description">
+            Chorizo, chickpea espuma, pequillos
+          </p>
+          <p class="menu__wrapItems__item__price">$89</p>
         </div>
         <div class="menu__wrapItems__item">
-            <h4 class="menu__wrapItems__item__title">Sea Bass Ceviche</h4>
-            <p class="menu__wrapItems__item__description">Avocado, butternut, lime</p>
-            <p class="menu__wrapItems__item__price"></p>
+          <h4 class="menu__wrapItems__item__title">Sea Bass Ceviche</h4>
+          <p class="menu__wrapItems__item__description">
+            Avocado, butternut, lime
+          </p>
+          <p class="menu__wrapItems__item__price"></p>
         </div>
         <div class="menu__wrapItems__item">
-            <h4 class="menu__wrapItems__item__title">Corrèze Pan-seared Veal Liver</h4>
-            <p class="menu__wrapItems__item__description">Olive oil mashed potato, onion jus</p>
-            <p class="menu__wrapItems__item__price">$89</p>
+          <h4 class="menu__wrapItems__item__title">
+            Corrèze Pan-seared Veal Liver
+          </h4>
+          <p class="menu__wrapItems__item__description">
+            Olive oil mashed potato, onion jus
+          </p>
+          <p class="menu__wrapItems__item__price">$89</p>
         </div>
         <div class="menu__wrapItems__item">
-            <h4 class="menu__wrapItems__item__title">Grilled Veal Filet Mignon</h4>
-            <p class="menu__wrapItems__item__description">Pumpkin, endives with hazelnuts</p>
-            <p class="menu__wrapItems__item__price">$89</p>
+          <h4 class="menu__wrapItems__item__title">
+            Grilled Veal Filet Mignon
+          </h4>
+          <p class="menu__wrapItems__item__description">
+            Pumpkin, endives with hazelnuts
+          </p>
+          <p class="menu__wrapItems__item__price">$89</p>
         </div>
         <div class="menu__wrapItems__item">
-            <h4 class="menu__wrapItems__item__title">Tender Octopus and Fennel</h4>
-            <p class="menu__wrapItems__item__description">Citrus, wild rocket condiment</p>
-            <p class="menu__wrapItems__item__price">$89</p>
+          <h4 class="menu__wrapItems__item__title">
+            Tender Octopus and Fennel
+          </h4>
+          <p class="menu__wrapItems__item__description">
+            Citrus, wild rocket condiment
+          </p>
+          <p class="menu__wrapItems__item__price">$89</p>
         </div>
         <div class="menu__wrapItems__item">
-            <h4 class="menu__wrapItems__item__title">Viennese Veal Cutlet</h4>
-            <p class="menu__wrapItems__item__description">Ricotta and spinach gnocchi, Caccio de Pepe</p>
-            <p class="menu__wrapItems__item__price">$89</p>
+          <h4 class="menu__wrapItems__item__title">Viennese Veal Cutlet</h4>
+          <p class="menu__wrapItems__item__description">
+            Ricotta and spinach gnocchi, Caccio de Pepe
+          </p>
+          <p class="menu__wrapItems__item__price">$89</p>
         </div>
-    </div>
-    <img src="assets/img/our-menu/img2bg-our-menu.jpg" alt="">
-</section>
+      </div>
+      <img src="assets/img/our-menu/img2bg-our-menu.jpg" alt="" />
+    </section>
 
-<!-- Gallery -->
+    <!-- Gallery -->
+    <section class="gallery">
+      <h2 class="gallery__filigran">Gallery</h2>
+      <div class="gallery__wrapTitle">
+        <h3 class="gallery__wrapTitle__title">restaurants photo gallery</h3>
+        <p class="gallery__wrapTitle__text">Best foods for you & family</p>
+      </div>
+      <div class="gallery_image">
+        <img src="assets/img/gallery/img1gallerybox.jpg" alt="">
+        <img src="assets/img/gallery/img2gallerybox.jpg" alt="">
+        <img src="assets/img/gallery/img3gallerybox.jpg" alt="">
+        <img src="assets/img/gallery/img4gallerybox.jpg" alt="">
+        <img src="assets/img/gallery/img5gallerybox.jpg" alt="">
+        <img src="assets/img/gallery/img6gallerybox.jpg" alt="">
+      </div>
+      <div class="more">
+        <p class="more_infos">view more infos<i class="fa-solid fa-arrow-right"></i></p>
+      </div>
+    </section>
+    <!-- Team -->
 
-<!-- Team -->
+    <!-- Blog -->
 
-<!-- Blog -->
-
-<!-- Footer  Virginie-->
+    <!-- Footer  Virginie-->
   </body>
   <script
     src="https://kit.fontawesome.com/cabdd58b8c.js"
