--- a/index.html
+++ b/index.html
@@ -276,12 +276,20 @@
         <p class="gallery__wrapTitle__text">Best foods for you & family</p>
       </div>
       <div class="gallery_image">
-        <img src="assets/img/gallery/img1gallerybox.jpg" alt="">
-        <img src="assets/img/gallery/img2gallerybox.jpg" alt="">
-        <img src="assets/img/gallery/img3gallerybox.jpg" alt="">
-        <img src="assets/img/gallery/img4gallerybox.jpg" alt="">
-        <img src="assets/img/gallery/img5gallerybox.jpg" alt="">
-        <img src="assets/img/gallery/img6gallerybox.jpg" alt="">
+        <div class="gallery_image_food1">
+          <img src="assets/img/gallery/img1gallerybox.jpg" alt="">
+        </div>
+        <div class="gallery_image_food2">
+          <img src="assets/img/gallery/img2gallerybox.jpg" alt="">
+          <img src="assets/img/gallery/img3gallerybox.jpg" alt="">
+        </div>
+        <div class="gallery_image_food2">
+          <img src="assets/img/gallery/img4gallerybox.jpg" alt="">
+          <img src="assets/img/gallery/img5gallerybox.jpg" alt="">
+        </div>
+        <div class="gallery_image_food1">
+          <img src="assets/img/gallery/img6gallerybox.jpg" alt="">
+        </div>
       </div>
       <div class="more">
         <p class="more_infos">view more infos<i class="fa-solid fa-arrow-right"></i></p>
