Finish menu mobile

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <p class="menu__wrapItems__item__description">
             Avocado, butternut, lime
           </p>
-          <p class="menu__wrapItems__item__price"></p>
+          <p class="menu__wrapItems__item__price">$89</p>
         </div>
         <div class="menu__wrapItems__item">
           <h4 class="menu__wrapItems__item__title">
@@ -265,7 +265,7 @@
           <p class="menu__wrapItems__item__price">$89</p>
         </div>
       </div>
-      <img src="assets/img/our-menu/img2bg-our-menu.jpg" alt="" />
+      <img class="menu__img" src="assets/img/our-menu/img2bg-our-menu.jpg" alt="Picture of a piece of meat on ice cubes" />
     </section>
 
     <!-- Gallery -->
