Complete HTML chefs

--- a/index.html
+++ b/index.html
@@ -296,7 +296,19 @@
       </div>
     </section>
     <!-- Team -->
-
+    <section class="chefs">
+        <h2 class="chefs__filigran">Our chefs</h2>
+        <div class="chefs__wrapTitle">
+            <h3 class="chefs__wrapTitle__title">Meet professional chefs</h3>
+            <p class="chefs__wrapTitle__text">Best foods for you & family</p>
+        </div>
+        <div class="chefs__wrapPhotos">
+            <img src="assets/img/team/img1team.jpg" alt="Picture chief1" class="chefs__wrapPhotos__photos">
+            <img src="assets/img/team/img2team.jpg" alt="Picture chief2" class="chefs__wrapPhotos__photos">
+            <img src="assets/img/team/img3team.jpg" alt="Picture chief3" class="chefs__wrapPhotos__photos">
+            <img src="assets/img/team/img4team.jpg" alt="Picture chief4" class="chefs__wrapPhotos__photos">
+        </div>
+    </section>
     <!-- Blog -->
 
     <!-- Footer  Virginie-->
