--- a/index.html
+++ b/index.html
@@ -298,7 +298,52 @@
     <!-- Team -->
 
     <!-- Blog -->
-
+    <section class="blog">
+      <h2 class="blog__filigran">our blog</h2>
+      <div class="blog__wrapTitle">
+        <h3 class="blog__wrapTitle__title">last news & blog</h3>
+        <p class="blog__wrapTitle__text">Best foods for you & family</p>
+      </div>
+      <div class="blog_news1">
+        <div class="blog_img1">
+          <img src="assets/img/blog/img3blohhome01.jpg" alt="">
+        </div>
+        <div class="blog_ww">
+          <h6><i class="fa-regular fa-circle-user"></i> By Williamson</h6>
+          <h6><i class="fa-solid fa-calendar-days"></i> 25 Aug 2021</h6>
+        </div>
+        <p>How To Run A UX Audit For Major EdTech Platform Case Study</p>
+      </div>
+      <div class="blog_more">
+        <p class="blog_read_more">Read More <i class="fa-solid fa-arrow-right"></i></p>
+      </div>
+      <div class="blog_news1">
+        <div class="blog_img1">
+          <img src="assets/img/blog/img1blohhome01.jpg" alt="">
+        </div>
+        <div class="blog_ww">
+          <h6><i class="fa-regular fa-circle-user"></i> By Williamson</h6>
+          <h6><i class="fa-solid fa-calendar-days"></i> 25 Aug 2021</h6>
+        </div>
+        <p>How To Run A UX Audit For Major EdTech Platform Case Study</p>
+      </div>
+      <div class="blog_more">
+        <p class="blog_read_more">Read More <i class="fa-solid fa-arrow-right"></i></p>
+      </div>
+      <div class="blog_news1">
+        <div class="blog_img1">
+          <img src="assets/img/blog/img2blohhome01.jpg" alt="">
+        </div>
+        <div class="blog_ww">
+          <h6><i class="fa-regular fa-circle-user"></i> By Williamson</h6>
+          <h6><i class="fa-solid fa-calendar-days"></i> 25 Aug 2021</h6>
+        </div>
+        <p>Designing With Code A Modern Approach To Development</p>
+      </div>
+      <div class="blog_more">
+        <p class="blog_read_more">Read More <i class="fa-solid fa-arrow-right"></i></p>
+      </div>
+    </section>
     <!-- Footer  Virginie-->
   </body>
   <script
